fix spacing on paragraph and picture 3

--- a/college-experience3.sass
+++ b/college-experience3.sass
@@ -56,7 +56,7 @@ $font-family: Tahoma
   background-size: cover
   background-position: bottom right
   display: flex
-  flex-direction: column
+  flex-direction: row
   align-items: start
   justify-content: center
   background: white
